--- a/index.html
+++ b/index.html
@@ -7,30 +7,65 @@
   <link	rel="stylesheet" href="./assets/css/global.css">
 </head>
 <body id="root">
-  <!-- <div id="root"> -->
-    <header id="header-content">
-      <div class="header-sub-content">
-        <div><span class="sub-title">Uma seleção de produtos</span></div>
-        <div><span class="title">especial para você</span></div>
-        <div class="sub-title-second-content">
-          <span class="sub-title-second">Todos os produtos dessa lista foram selecionados a partir da sua navegação. Aproveite!</span>
-        </div>
-        <div id="nav-content">
-          <!-- <nav> -->
-            <button>Conheça a Linx</button>
-            <button>Ajude o algoritmo</button>
-            <button>Seus Produtos</button>
-            <button>Compartilhe</button>
-          <!-- </nav> -->
-        </div>
+  
+  <header id="header-content">
+    <div class="header-sub-content">
+      <div><span class="sub-title">Uma seleção de produtos</span></div>
+      <div><span class="title">especial para você</span></div>
+      <div class="sub-title-second-content">
+        <span class="sub-title-second">Todos os produtos dessa lista foram selecionados a partir da sua navegação. Aproveite!</span>
       </div>
-    </header>
-    <section>
+      <div id="nav-content">
+        <!-- <nav> -->
+          <button>Conheça a Linx</button>
+          <button>Ajude o algoritmo</button>
+          <button>Seus Produtos</button>
+          <button>Compartilhe</button>
+        <!-- </nav> -->
+      </div>
+    </div>
+  </header>
 
+  <section id="second-section-info-form">
+
+    <section id="text-algorithm-content">
+      <span class="title-algorithm-content">Ajude o algorítimo a ser mais certeiro</span>
+      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque ultricies tellus nec mi porta convallis sollicitudin eu urna. Mauris rhoncus erat sed interdum dignissim. Suspendisse semper pretium consectetur. Praesent bibendum arcu risus, sit amet iaculis ex tempus quis. Cras et erat ut tellus vulputate tincidunt. Aenean lacinia euismod augue vel egestas. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum vel urna tortor. Vivamus et arcu non felis tristique eleifend.<br/><br/> Morbi eu condimentum urna. Curabitur eu magna eget turpis condimentum ultrices. Suspendisse quis lorem ultricies, pulvinar purus sed, egestas erat. Etiam ultricies a ante vehicula pharetra. Quisque ut neque mattis, consequat velit ut, ultrices orci. Nulla varius elementum erat vel pharetra. Aenean sit amet nisi diam. Morbi viverra, magna ac luctus commodo, odio ante suscipit libero, at mattis augue est vel metus.</p>
     </section>
-    <footer>
 
-    </footer>
-  <!-- </div> -->
+    <section id="form-contact-content">
+      <form>
+
+        <div class="form-label-input">
+          <span class="label-form">Seu nome</span>
+          <input type="text" name="name" value=""/>
+        </div>
+
+        <div class="form-label-input">
+          <span class="label-form">E-mail</span>
+          <input type="text" name="email" value=""/>
+        </div>
+        
+        <div class="form-label-input">
+          <span class="label-form">CPF:</span>
+          <input type="text" name="email" value=""/>
+        </div>
+
+        <div class="form-label-input">
+          <div class="radio-buttons-content">
+            <input type="radio" name="email" value="m"/>&nbsp; <span class="label-form">Masculino</span>&nbsp;&nbsp;&nbsp;&nbsp;
+            <input type="radio" name="email" value="f"/>&nbsp; <span class="label-form">Feminino</span>
+          </div>
+        </div>
+
+        <button type="submit"><span>Enviar</span></button>
+      </form>
+    </section>
+
+  </section>
+
+  <footer>
+
+  </footer>
 </body>
 </html>
