Cards de produtos estilizados

--- a/index.html
+++ b/index.html
@@ -68,22 +68,15 @@
     <hr/>
     <div class="header-content"><header>Sua Seleção Especial</header></div>
     <div class="products-area">
+      <section class="product-articles-content">
+        
+      </section>
+      <!-- <article class="product-article"> -->
+        <!-- <div > -->
 
-      <article class="product-article">
-
-<!--         
-        <figure>
-          <img class="product-image" src=”” width="200" height="150" alt="">
-        </figure>
-        <p class="product-name"></p>
-        <p class="product-description"></p>
-        <p class="product-total-price"></p>
-        <p class="product-price"></p>
-        <p class="product-installments"></p>
-        <button>Comprar</button> -->
-
-      </article>
-
+    
+        <!-- </div> -->
+      <!-- </article> -->
     </div>
 
   </section>
